fixed the issue of text not showing properly#407

--- a/artists/styles.css
+++ b/artists/styles.css
@@ -147,9 +147,6 @@ a:hover {
 		grid-template-columns: repeat(1,1fr);
 		padding: 10px;
 	}
-	.h1{
-		font-size: 20px;
-	}
 	.artist-card{
 		padding: 10px;
 	}
